started adding add functionality, did not complete testing

--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,16 @@
                     </button>
                 </div>
                 <div class="modal-body">
-                    ...
+
+                    <label for="title-edit">Title</label>
+                    <input type="text" name="title-edit" id="title-edit" />
+                    <label for="title-edit">Rating</label>
+                    <input type="text" name="rating-edit" id="rating-edit" />
+                    <label for="title-edit">Genre</label>
+                    <input type="text" name="genre-edit" id="genre-edit" />
+
+                    <button type="submit" name="submit-edit" id="submit-edit">Submit</button>
+
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
