--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,11 @@
     <title>My Application</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="/style.css" />
+    <style>
+        .delete-btn{
+            color: red;
+        }
+    </style>
 </head>
 <body>
 
@@ -39,8 +44,7 @@
 
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary">Save changes</button>
+                    <button type="button" class="btn btn-primary" id = "save-edit">Save changes</button>
                 </div>
             </div>
         </div>
