added a sorter function based on title

--- a/public/index.html
+++ b/public/index.html
@@ -10,10 +10,12 @@
 <body>
 
     <div class="container">
-
+        <div class = "row justify-content-end pr-3">
         <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modal">
             Add Movies
         </button>
+            <button type="button" class="btn btn-primary ml-1" id = "sorter">Sort Movies</button>
+        </div>
 
         <h1 id ="loading">Loading...</h1>
         <div id= "movie-container">
